# axum-sqlx-example

./: .env  .gitignore  Cargo.toml  Makefile  README.md
docker/: Dockerfile  docker-compose.yml
migrations/: 20230226125158_create_users.up.sql  20230226125250_create_todos.up.sql
schemas/: init.sql
src/: db.rs  entity.rs  handlers.rs  main.rs  postgres_repository.rs  repository.rs
