[package]
name = "axum-sqlx-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
axum = "0.6.7"
chrono = { version = "0.4.23", features = ["serde"] }
diesel = { version = "2.0.0", features = ["postgres"] }
dotenv = "0.15.0"
serde = { version = "1.0.152", features = ["derive"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1.25.0", features = ["full"] }
uuid = { version = "1.3.0", features = ["serde"] }
