[package]
name = "axum-sqlx-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
axum = "0.6.7"
chrono = { version = "0.4.23", features = ["serde"] }
dotenv = "0.15.0"
http-body = "0.4.5"
hyper = { versoni = "0.14.24", features = ["full"] }
mime = "0.3.16"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
sqlx = { version = "0.6.2", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
] }
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["full"] }
tower = "0.4.13"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
uuid = { version = "1.3.0", features = ["v4", "serde"] }
validator = { versoin = "0.16.0", features = ["derive"] }
